apply plugin: 'com.android.application'

def keystorePropertiesFile = rootProject.file("keystore.properties")
def keystoreProperties = new Properties()
keystoreProperties.load(new FileInputStream(keystorePropertiesFile))

android {
    compileSdkVersion 25
    buildToolsVersion '27.0.3'

    defaultConfig {
        applicationId "com.starkasse.kasse"
        minSdkVersion 18
        targetSdkVersion 25
        versionCode 2
        versionName "1.0"

//        // Only build for armeabi-v7a.  (Removes x86)
//        ndk {
//            abiFilters "armeabi-v7a"
//        }
    }

    signingConfigs {
        release {
            keyAlias keystoreProperties['keyAlias']
            keyPassword keystoreProperties['keyPassword']
            storeFile file(keystoreProperties['storeFile'])
            storePassword keystoreProperties['storePassword']
        }
    }
    // Tell Gradle to sign your APK
    buildTypes {
        release {
            signingConfig signingConfigs.release
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }

    lintOptions {
        abortOnError false
    }

    dexOptions {
        preDexLibraries = false
        javaMaxHeapSize "4g"
    }

    compileOptions {
        targetCompatibility 1.8
        sourceCompatibility 1.8
    }
}

repositories {
    //mavenLocal()
    maven {
        url 'https://download.01.org/crosswalk/releases/crosswalk/android/maven2'
    }
}


dependencies {
    compile fileTree(include: ['*.jar'], dir: 'libs')
    compile 'com.android.support:appcompat-v7:25.0.0'
    compile 'com.hierynomus:smbj:0.5.1'
    compile 'org.xwalk:xwalk_core_library:23.53.589.4'
    compile files('libs/posprinterconnectandsendsdk.jar')
    compile 'com.koushikdutta.async:androidasync:2.+'
    compile 'com.google.code.gson:gson:2.7'
    annotationProcessor 'com.jakewharton:butterknife:6.1.0'
    compile 'com.jakewharton:butterknife:6.1.0'
    compile project(':ScreenSharingSDK')
    compile 'commons-io:commons-io:2.6'
    implementation files('libs/posindev.jar')
}
